# socialflow

./: .cursorrules  .env.example  .eslintcache  .gitignore  .npmrc  .shipflow-tools.conf  AGENT.md  ARCHITECTURE.md  AUDIT_LOG.md  BRANDING.md  BUSINESS.md  CHANGELOG.md  CLAUDE.md  CONTEXT-FUNCTION-TREE.md  CONTEXT.md  PRODUCT.md  README.md  ROLLBACK_07f2035.md  TASKS.md  TAURI_MOBILE.md  archi.md  ecosystem.config.cjs  index.html  manifest.config.ts  manifest.firefox.config.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.node.json  tsconfig.typecheck.core.json  vercel.json  vite.config.ts  vite.tauri.config.ts  vite.web.config.ts  vitest.config.ts
.claude/: settings.json  settings.json.bak-mcp-disabled-20260425-163821
.flox/: env.json
.github/: dependabot.yml
archive/: README.md
bugs/: BUG-2026-05-10-001.md
convex/: auth.ts  authHelpers.test.ts  authHelpers.ts  customLinks.ts  friendsFilters.ts  http.ts  mutations.test.ts  profiles.ts  schema.ts  settings.ts  socialAccounts.ts  test.setup.ts  users.ts  (+2 more)
src-tauri/: Cargo.toml  DEPENDENCY_AUDIT.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/android-webview/: Cargo.toml  build.rs
src-tauri/plugins/android-webview/android/: build.gradle.kts  proguard-rules.pro
src-tauri/plugins/android-webview/android/src/main/java/com/socialflow/webview/: NativeWebViewPlugin.kt
src-tauri/plugins/android-webview/android/src/main/java/com/socialflowz/webview/: NativeWebViewPlugin.kt
src-tauri/plugins/android-webview/android/src/main/java/com/socialglowz/webview/: NativeWebViewPlugin.kt
src-tauri/plugins/android-webview/src/: error.rs  lib.rs  mobile.rs
src-tauri/src/: backup.rs  lib.rs
(+330 files in other folders)
