[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
publish = false
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-android-webview = { path = "plugins/android-webview" }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22"
url = "2"
aes-gcm = "0.10"
argon2 = "0.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Desktop: unstable child-webview API + system tray
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2.10.0", features = ["unstable", "tray-icon", "image-png"] }

# Android: minimal build without desktop-only features
[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2.10.0", features = ["unstable", "tray-icon", "image-png"] }
