[package]
name = "tauri-plugin-android-webview"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-android-webview"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
log = "0.4"
thiserror = "2"
